# python-django-example

./: .env.example  .gitignore  Procfile  README.md  docker-compose.yaml  main.py  pyproject.toml
api/: urls.py  views.py
config/: settings.py  wsgi.py
docs/: dokku-magalu.md
