[project]
name = "python-django-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
    "djangorestframework>=3.16.1",
    "dj-database-url==2.0.0",
    "dj-static==0.0.6",
    "gunicorn>=21.2,<22.0",
    "psycopg2-binary>=2.9.10",
    "python-decouple==3.8",
]
